# experiment_matsuzawa_250918_5

./: pyproject.toml
.github/workflows/: run_experiment.yml  run_experiment_with_claude_code.yml
.research/: research_history.json
.research/iteration1/: error.txt  output.txt  timm_resnet18.a1_in1k_fisher.pth  timm_resnet50.a1_in1k_fisher.pth
.research/iteration1/smoke_test_outputs/: timm_resnet18.a1_in1k_fisher.pth
.research/iteration2/: error.txt  output.txt
.research/iteration3/: .nfs0000000003bc87a5000002ba  error.txt  output.txt
.research/iteration4/: error.txt  output.txt
.research/iteration5/: .nfs0000000003bc003500000843  error.txt  experiment_2_results.json  output.txt
.research/iteration6/: error.txt  output.txt
.research/iteration7/: error.txt  experiment_1_results.json  output.txt
config/: full_experiment.yaml  smoke_test.yaml
src/: evaluate.py  main.py  preprocess.py  train.py
