[project]
name = "s3-gat-research"
version = "0.1.0"
description = "S3-GAT: Streaming, Signed, Spectrally-bounded Graph Attention with Privacy knobs"
authors = [{name = "AI Researcher"}]

dependencies = [
    "torch>=2.1.0",
    "triton>=2.1.0; platform_system=='Linux'",  # Triton is Linux-only
    "torch_geometric>=2.4.0",
    "datasets>=2.14.0",
    "ogb>=1.3.6",
    "numpy>=1.23.5",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "pynvml>=11.5.0",
    "opacus>=1.4.0",
    "optuna>=3.3.0",
    "salib>=1.4.5",
    "pyyaml>=6.0",
    "ptflops>=0.6.9",
    "networkx>=3.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]
