[project]
name = "certified-officer"
version = "0.1.0"
description = "Implementation of CERTIFIED-OFFICER for robust prompt optimization."
readme = "README.md"
requires-python = ">=3.8"

[project.dependencies]
torch = ">=2.1.0"
transformers = ">=4.35.0"
peft = ">=0.8.0"
bitsandbytes = ">=0.41.0"
accelerate = ">=0.23.0"
wandb = "*"
pandas = "*"
scikit-learn = "*"
numpy = "*"
huggingface-hub = "*"
datasets = "*"
PyYAML = "*"
ptflops = "*"
fasttext-wheel = "*"
diffusers = "*"
sentence-transformers = "*"
matplotlib = "*"
seaborn = "*"
wget = "*"
tqdm = "*"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
